--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,6 +23,8 @@ website:
       - blog.qmd
       - href: about.qmd
         text: About
+      - href: contact.qmd
+        text: Contact
 
 format:
   html:
