--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,9 +12,8 @@ website:
   google-analytics:
     tracking-id: "G-57GYE4EX4G"
     anonymize-ip: true
-    storage: none
-  # cookie-consent:
-  #   type: express
+  cookie-consent:
+    type: express
   navbar:
     left:
       - href: index.qmd
