disable commit comment

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -35,7 +35,7 @@ jobs:
           alias: deploy-preview-${{ github.event.number }}
           # these all default to 'true'
           enable-pull-request-comment: true
-          enable-commit-comment: true
+          enable-commit-comment: false
           enable-commit-status: true
           overwrites-pull-request-comment: false
         timeout-minutes: 1
